--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ paginate_path: "/page:num/"
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 
 # Comments
-disqus_shortname:   tianjie
+disqus_shortname:   linfeng365
 
 title:
-url: https://violettianjie.github.io
+url: https://linfeng365.github.io
 feed: /atom.xml
-author_info: <a href="/">tianjie</a>
+author_info: <a href="/">linfeng365</a>
